# lg-ompc

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: environment_definition.md
examples/hydration/: run.py  walkthrough.ipynb  world.py
examples/incident_response/: walkthrough.ipynb  world.py
examples/rover/: walkthrough.ipynb  world.py
src/lg_ompc/: __init__.py  actions.py  controller.py  entities.py  environment.py  planner.py  relations.py  sandbox.py  serialization.py  synthesis.py
tests/: conftest.py  test_controller.py  test_entities.py  test_environment.py  test_planner.py  test_sandbox.py  test_serialization.py
