[project]
name = "lg-ompc"
version = "0.1.0"
description = "Language-Guided Objective Model Predictive Control: LLM-synthesized objectives for world-model-based planning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lg_ompc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
